--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@babel/preset-react": "^7.16.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
@@ -27,13 +26,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -50,12 +47,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^12.1.2",
-    "@types/jest": "^27.0.3",
-    "jest": "^26.6.3",
     "prettier": "^2.5.1"
-  },
-  "transform": {
-    "\\.jsx$": "<rootDir>/node_modules/babel-jest"
   },
   "babel": {
     "presets": [
@@ -66,11 +58,5 @@
       "@babel/proposal-class-properties",
       "@babel/plugin-transform-runtime"
     ]
-  },
-  "jest": {
-    "moduleNameMapper": {
-      "\\.(css|less|sass|scss)$": "<rootDir>/__mocks__/styleMock.js",
-      "\\.(gif|ttf|eot|svg)$": "<rootDir>/__mocks__/fileMock.js"
-    }
   }
 }
